--- a/styles/style.scss
+++ b/styles/style.scss
@@ -2,33 +2,69 @@
 @import 'partials/base';
 
 header {
+    background: url('../images/pattern-dots.png') no-repeat right;
     display: grid;
     grid-template-columns: 50% 50%;
     padding: 25px 0;
-    nav ul{
-        display: flex;
-        justify-content: space-around;
-        li {
-            padding-bottom: 10px;
-            border-bottom: 1px solid black;
-            transition: 0.3s;
-        }
-        li:hover {
-            border-bottom: 1px solid red;
-            padding-bottom: 10px;
-            transition: 0.3s;
+    nav {
+        ul{
+            display: flex;
+            justify-content: space-around;
+            li {
+                padding-bottom: 10px;
+                border-bottom: 1px solid $bg-color;
+                transition: 0.3s;
+            }
+            li:hover {
+                border-bottom: 1px solid red;
+                padding-bottom: 10px;
+                transition: 0.3s;
+            }
         }
     }
+    #x-grey{
+        top: 50px;
+        left: 450px;
+    }
 }
-
-
+.bg-shapes{
+            position: absolute;
+}
+    
 .main-banner {
+    background: url('../images/hello-bg.png') no-repeat left;
     text-align: center;
-    h1 {
-        color:$secondary-color;
-        font-size: 72px;
-        text-align: center;
-        margin: 25px;
+    position: relative;
+    padding: 100px 0;
+    margin: 0;
+    .shapes-bg {
+        background: url('../images/dotted-half-circle.png') no-repeat right bottom;
+        position: relative;
+        padding: 50px 0;
+        #square {
+            top: 50px;
+            left: 150px;
+        }
+        #circle {
+            bottom: 0px;
+            right: 300px;
+        }
+        #squiggle-blue {
+            top: 0px;
+            right: 600px;
+        }
+        #squiggle-green{
+            left: 100px;
+            top: 200px;
+        }
+        #triangle {
+            top: 50px;
+            right: 200px;
+        }
+        #diamond {
+            bottom: 10px;
+            left: 250px;
+        }
     }
     blockquote {
         text-align: center;
@@ -40,4 +76,196 @@ header {
         padding: 10px 50px;
         margin: 30px;
     }
+}
+
+.skills-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    .skill-item {
+        width: 100%;
+        margin: 0 auto;
+        border: 1px solid #212121;
+        display: grid;
+        padding: 50px;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
+        // grid-template-areas: 
+        //     ".fa-android h3"
+        //     ".fa-android p"
+        //     ".fa-android button";               
+    }
+    .fa-android {
+        grid-row-start: 1;
+        grid-row-end: 2;
+        height: 100%;
+        font-size: 100px;
+        margin: 0 auto;
+    }
+    h3, p, button {
+        grid-column-start: 2;
+        grid-column-end: 5;
+    }
+    h3 {
+        font-size: 30px;
+    }
+    button {
+        padding: 10px;
+        width: 50%;
+        height: 50%;
+    }
+}
+.projects-section{
+    background: url('../images/pattern-dots-vertical.png')no-repeat;
+}
+.projects {
+    text-align: center;
+    position: relative;
+    .projects-container {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        grid-gap: 25px;
+        margin: 50px 0;
+        .project-item {
+            background: lightgrey;
+            width: 100%;
+            height: 200px;
+            border: 1px solid black;
+        }
+        .middle-project {
+            grid-column-start: 2;
+            grid-column-end: 3;
+            grid-row-start: 1;
+            grid-row-end: 3;
+            height: 100%;
+        }
+    }
+    button {
+        background: none;
+        padding: 10px 50px;
+        margin: 30px auto;
+    }
+    #squiggle {
+        top: 20px;
+        right: 150px;
+    }
+}
+
+.stats {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    text-align: center;
+    h3 {
+        font-size:48px;
+    }
+    h5 {
+        font-size: 20px;
+    }
+    .stat1{
+        color: #2246e8;
+    }
+    .stat2{
+        color: $third-color;
+    }
+    .stat3{
+        color: $primary-color;
+    }
+    .stat4{
+        color: $secondary-color;
+    }
+}
+
+.about-me{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    // grid-template-rows: 1fr 3fr;
+    .profile-pic {
+        background: grey;
+    }
+}
+
+.coding-languages {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    grid-gap: 50px;
+    .code-logo{
+        text-align: center;
+    }
+    img, i {
+        font-size: 100px;
+        height: 100px;
+        opacity: 0.3;
+        filter: grayscale(100%);  
+        transition: 0.3s;      
+    }
+    img:hover, i:hover {
+        filter: none;
+        transition: 0.3s;
+        opacity: 1;
+    }
+}
+
+.contact {
+    // background-image: linear-gradient( 135deg, #FD6E6A 10%, #FFC600 100%);
+    // background-image: linear-gradient( 135deg, #FF9D6C 10%, #BB4E75 100%);
+    background-image: linear-gradient( 135deg, #F05F57 10%, #360940 100%);
+    // background-image: linear-gradient( 135deg, #92FFC0 10%, #002661 100%);
+    // background-image: linear-gradient( 135deg, #FD6E6A 10%, #FFC600 100%);
+    text-align: center;
+    padding: 50px 0;
+    h2 {
+        font-size: 48px;
+    }
+    p {
+        font-size: 20px;
+    }
+    .social-media {
+        display: flex;
+        justify-content: space-around;
+        width: 25%;
+        margin: 0 auto;
+        font-size: 30px;
+        li {
+            width: 30px;
+        }
+        img {
+            height: 30px;
+        }
+        .svg-inline--fa{
+            height: 25px;
+        }
+        .fa-facebook-f:hover,
+        .fa-instagram:hover,
+        .fa-linkedin-in:hover,
+        .fa-github:hover,
+        .fa-twitter:hover,
+        .fa-facebook-f,
+        .fa-instagram,
+        .fa-linkedin-in,
+        .fa-github,
+        .fa-twitter {
+            transition: 0.3s;
+            border-radius: 5px;
+        }
+
+        .fa-twitter:hover{
+            color:#00aced;
+        }
+        .fa-instagram:hover{
+            background: linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%);
+            border-radius: 5px;
+        }
+        .fa-linkedin-in:hover{
+            color:#007bb6;
+        }
+        .fa-github:hover{
+            color:#171516;
+        }
+        .fa-facebook-f:hover{
+            color: #3b5998;
+        }
+    } 
+    
+   
 }
