--- a/styles/components/_banner.scss
+++ b/styles/components/_banner.scss
@@ -10,8 +10,12 @@
     margin: 0;
     .shapes-bg {
         background: url('../images/dotted-half-circle.png') no-repeat right bottom;
+        }
         position: relative;
         padding: 50px 0;
+        img {
+            margin-top: 100px;
+        }
         h2{
             position: relative;
             bottom: 150px;
@@ -54,7 +58,7 @@
         padding: 10px 50px;
         margin: 30px;
     }
-}
+
 
 @media (max-width:1020px) {
     .main-banner .shapes-bg h2 {
