--- a/styles/components/_projects.scss
+++ b/styles/components/_projects.scss
@@ -3,32 +3,51 @@
     background: url('../images/pattern-dots-vertical.png')no-repeat;
 }
 .projects {
-    text-align: center;
     position: relative;
+    h4 {
+            text-align: center;
+        }
     .projects-container {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-template-rows: 1fr 1fr;
-        grid-gap: 25px;
         margin: 50px 0;
         .project-item {
-            background: lightgrey;
             width: 100%;
-            height: 200px;
-            border: 1px solid black;
+            display: flex;
+            margin: 100px 0; 
         }
-        .middle-project {
-            grid-column-start: 2;
-            grid-column-end: 3;
-            grid-row-start: 1;
-            grid-row-end: 3;
-            height: 100%;
+        .project-img {
+            padding: 25px 0;
+            text-align: center;
+            img {
+                width: 100%;
+                margin: 30px 0;            
         }
-    }
-    button {
-        background: none;
-        padding: 10px 50px;
-        margin: 30px auto;
+            a {
+                padding: 10px 20px;
+                border: 2px solid white;
+            }
+        }
+        .project-info {
+            margin: 0 50px;
+            padding: 25px;
+
+        }
+        h3 {
+            font-size: 30px;
+            text-align: center;
+        }
+        
+        .project-alt {
+            flex-direction: row-reverse;
+        }
+        .project-code li{
+            display: inline;
+            font-size: 20px;
+            border-right: 2px solid white;
+            padding: 0 20px;
+        }
+        .project-code li:first-child {
+            border-left: 2px solid white;
+        }
     }
     #squiggle {
         top: 20px;
@@ -59,18 +78,33 @@
         color: $secondary-color;
     }
 }
+@media (max-width:960px) {
+    .projects-container{
+        .project-item{
+            flex-direction: column;
+            .project-img {
+                width: 75%;
+                margin: 0 auto;
+            }
+            .project-info {
+                text-align: center;
+            }
+        }  
+    }
+    .projects .projects-container .project-alt {
+        flex-direction: column;
+    }
+}
 
 @media (max-width:720px) {
-    .projects {
-        .projects-container {
-        grid-template-columns: 1fr 1fr;
-       
-    }
-}
+
+        .projects .projects-container .project-info {
+            margin: 0 25px;
+        }
 }
 
-@media (max-width: 360px) {
-    .stats {
-        grid-template-columns: 1fr 1fr;
-    }
+@media (max-width: 540px) {
+    .projects .projects-container .project-info {
+            margin: 0px;
+        }
 }
