--- a/styles/components/_about.scss
+++ b/styles/components/_about.scss
@@ -6,11 +6,23 @@
             width: 70%;
             border: 3px solid white;
         }
+        figcaption {
+            font-size: 10px;
+        }
     }
     .bio {
         padding: 0 25px;
         h4 {
             margin: 25px 0;
+        }
+    }
+}
+
+@media (max-width:960px) {
+    .about-me {
+        width: 90%;
+        .bio h4 {
+            margin:0 0 25px 0;
         }
     }
 }
@@ -21,6 +33,9 @@
         text-align: center;
         .profile-pic {
             margin: 0 auto;
+        }
+        .bio h4 {
+            margin: 25px 0;
         }
     }
 }
