--- a/styles/components/_skills.scss
+++ b/styles/components/_skills.scss
@@ -35,8 +35,6 @@
         grid-column-end: 5;
         font-size: 25px;
         margin: 0;
-        padding: 0;
-        display: inline;
     }
     p {
         grid-column-start: 1;
@@ -56,7 +54,7 @@
         font-size: 100px;
         height: 100px;
         opacity: 0.3;
-        filter: grayscale(70%);  
+        filter: grayscale(90%);  
         transition: 0.3s;      
     }
     img:hover, i:hover {
@@ -66,10 +64,34 @@
     }
 }
 
+@media (max-width:960px) {
+    .skills-container {
+        .skill-item {
+            padding: 25px;
+        }
+        h3 {
+            font-size: 18px;
+            margin: auto 0;
+        }
+    }
+}
+
 @media (max-width:720px) {
     .skills-container {
+        grid-gap: 25px;
+        width: 75%;
         grid-template-columns: 100%;
+        .skill-item {
+            grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+            .fa-code, .fa-cubes, .ion-android-phone-portrait {
+                grid-column-start: 2;
+            }
+            h3 {
+                grid-column-start: 3;
+            }
+        }
     }
+
     .coding-languages {
         grid-gap: 10px;
     }
@@ -78,6 +100,9 @@
 @media (max-width: 540px) {
     .coding-languages {
         grid-template-columns: 1fr 1fr ;
+        .code-logo {
+            margin: 25px;
+        }
     }
 }
 
