--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 article, aside, details, figcaption, figure, footer, header, hgroup, nav, section, summary {
   display: block; }
 
@@ -160,15 +161,17 @@ header {
 
 @media (max-width: 540px) {
   header {
-    grid-template-columns: 1fr; }
+    display: block; }
     header nav {
       width: 100%; }
       header nav li {
-        margin: 0 35px; } }
+        margin: 0 35px; }
+  #x-grey {
+    display: none; } }
 
 @media (max-width: 360px) {
   header nav li {
-    margin: 0 15px; } }
+    margin: 0 10px; } }
 
 .bg-shapes {
   position: absolute; }
@@ -176,48 +179,46 @@ header {
 .main-banner {
   text-align: center;
   position: relative;
-  padding: 100px 0;
-  margin: 0;
-  position: relative;
-  padding: 50px 0; }
+  padding-top: 100px;
+  margin: 0; }
   .main-banner .shapes-bg {
-    background: url("../images/dotted-half-circle.png") no-repeat right bottom; }
-  .main-banner img {
-    margin-top: 100px; }
-  .main-banner h2 {
+    background: url("../images/dotted-half-circle.png") no-repeat right bottom;
     position: relative;
-    bottom: 150px;
-    left: -70px;
-    font-size: 30px;
-    color: lightgray; }
-  .main-banner #square {
-    top: 50px;
-    left: 150px; }
-  .main-banner #circle {
-    bottom: 0px;
-    right: 300px; }
-  .main-banner #squiggle-blue {
-    top: 0px;
-    right: 600px; }
-  .main-banner #squiggle-green {
-    left: 100px;
-    top: 200px; }
-  .main-banner #triangle {
-    top: 50px;
-    right: 200px; }
-  .main-banner #diamond {
-    bottom: 10px;
-    left: 250px; }
-
-blockquote {
-  text-align: center;
-  width: 50%;
-  margin: 0 auto; }
-
-button {
-  background: none;
-  padding: 10px 50px;
-  margin: 30px; }
+    padding: 50px 0; }
+    .main-banner .shapes-bg img {
+      margin-top: 100px; }
+    .main-banner .shapes-bg h2 {
+      position: relative;
+      bottom: 150px;
+      left: -70px;
+      font-size: 30px;
+      color: lightgray; }
+    .main-banner .shapes-bg #square {
+      top: 50px;
+      left: 150px; }
+    .main-banner .shapes-bg #circle {
+      bottom: 0px;
+      right: 300px; }
+    .main-banner .shapes-bg #squiggle-blue {
+      top: 0px;
+      right: 600px; }
+    .main-banner .shapes-bg #squiggle-green {
+      left: 100px;
+      top: 200px; }
+    .main-banner .shapes-bg #triangle {
+      top: 50px;
+      right: 200px; }
+    .main-banner .shapes-bg #diamond {
+      bottom: 10px;
+      left: 250px; }
+  .main-banner blockquote {
+    text-align: center;
+    width: 50%;
+    margin: 0 auto; }
+  .main-banner button {
+    background: none;
+    padding: 10px 50px;
+    margin: 30px; }
 
 @media (max-width: 1020px) {
   .main-banner .shapes-bg h2 {
@@ -266,9 +267,7 @@ button {
     grid-column-start: 2;
     grid-column-end: 5;
     font-size: 25px;
-    margin: 0;
-    padding: 0;
-    display: inline; }
+    margin: 0; }
   .skills-container p {
     grid-column-start: 1;
     grid-column-end: 5; }
@@ -284,22 +283,39 @@ button {
     font-size: 100px;
     height: 100px;
     opacity: 0.3;
-    filter: grayscale(70%);
+    filter: grayscale(90%);
     transition: 0.3s; }
   .coding-languages img:hover, .coding-languages i:hover {
     filter: none;
     transition: 0.3s;
     opacity: 1; }
 
+@media (max-width: 960px) {
+  .skills-container .skill-item {
+    padding: 25px; }
+  .skills-container h3 {
+    font-size: 18px;
+    margin: auto 0; } }
+
 @media (max-width: 720px) {
   .skills-container {
+    grid-gap: 25px;
+    width: 75%;
     grid-template-columns: 100%; }
+    .skills-container .skill-item {
+      grid-template-columns: 1fr 1fr 1fr 1fr 1fr; }
+      .skills-container .skill-item .fa-code, .skills-container .skill-item .fa-cubes, .skills-container .skill-item .ion-android-phone-portrait {
+        grid-column-start: 2; }
+      .skills-container .skill-item h3 {
+        grid-column-start: 3; }
   .coding-languages {
     grid-gap: 10px; } }
 
 @media (max-width: 540px) {
   .coding-languages {
-    grid-template-columns: 1fr 1fr; } }
+    grid-template-columns: 1fr 1fr; }
+    .coding-languages .code-logo {
+      margin: 25px; } }
 
 @media (max-width: 360px) {
   .skills-container .skill-item {
@@ -327,28 +343,46 @@ button {
       margin: 100px 0; }
     .projects .projects-container .project-img {
       padding: 25px 0;
-      text-align: center; }
+      text-align: center;
+      width: 100%; }
       .projects .projects-container .project-img img {
-        width: 100%;
-        margin: 30px 0; }
+        width: 100%; }
       .projects .projects-container .project-img a {
         padding: 10px 20px;
         border: 2px solid white; }
     .projects .projects-container .project-info {
-      margin: 0 50px;
-      padding: 25px; }
+      margin: 0 25px;
+      padding: 25px;
+      width: 100%; }
+      .projects .projects-container .project-info p {
+        line-height: 27px; }
     .projects .projects-container h3 {
       font-size: 30px;
-      text-align: center; }
+      margin-bottom: 0; }
     .projects .projects-container .project-alt {
       flex-direction: row-reverse; }
+    .projects .projects-container ul {
+      margin: 0 auto 20px; }
     .projects .projects-container .project-code li {
       display: inline;
-      font-size: 20px;
-      border-right: 2px solid white;
-      padding: 0 20px; }
-    .projects .projects-container .project-code li:first-child {
-      border-left: 2px solid white; }
+      font-size: 14px;
+      text-transform: uppercase; }
+    .projects .projects-container .project-code li::after {
+      content: ' • ';
+      padding: 5px; }
+    .projects .projects-container .project-code li:last-child::after {
+      content: ""; }
+    .projects .projects-container a {
+      border: 1px solid white;
+      padding: 5px 10px;
+      font-size: 14px;
+      margin-right: 5px;
+      text-transform: uppercase;
+      transition: 0.3s; }
+    .projects .projects-container a:hover {
+      background: white;
+      transition: 0.3s;
+      color: black; }
   .projects #squiggle {
     top: 20px;
     right: 150px; }
@@ -375,19 +409,29 @@ button {
     flex-direction: column; }
     .projects-container .project-item .project-img {
       width: 75%;
-      margin: 0 auto; }
-    .projects-container .project-item .project-info {
+      margin: 0 auto;
       text-align: center; }
+    .projects-container .project-item .project-info {
+      text-align: center;
+      margin: 0; }
   .projects .projects-container .project-alt {
     flex-direction: column; } }
 
-@media (max-width: 720px) {
-  .projects .projects-container .project-info {
-    margin: 0 25px; } }
+@media (max-width: 960px) {
+  .projects-container .project-img img {
+    margin: 0; }
+  .project-info p {
+    width: 75%;
+    margin: 35px auto; } }
 
 @media (max-width: 540px) {
+  .projects .projects-container .project-img img {
+    margin: 0; }
   .projects .projects-container .project-info {
     margin: 0px; } }
+
+.stats {
+  grid-template-columns: 1fr 1fr; }
 
 .about-me {
   display: flex; }
@@ -396,17 +440,27 @@ button {
     .about-me .profile-pic img {
       width: 70%;
       border: 3px solid white; }
+    .about-me .profile-pic figcaption {
+      font-size: 10px; }
   .about-me .bio {
     padding: 0 25px; }
     .about-me .bio h4 {
       margin: 25px 0; }
+
+@media (max-width: 960px) {
+  .about-me {
+    width: 90%; }
+    .about-me .bio h4 {
+      margin: 0 0 25px 0; } }
 
 @media (max-width: 720px) {
   .about-me {
     flex-direction: column;
     text-align: center; }
     .about-me .profile-pic {
-      margin: 0 auto; } }
+      margin: 0 auto; }
+    .about-me .bio h4 {
+      margin: 25px 0; } }
 
 @media (max-width: 540px) {
   .about-me {
@@ -488,4 +542,20 @@ h4 {
 
 section {
   width: 100%;
-  margin: 100px 0; }
+  margin: 150px 0; }
+
+.fa-arrow-circle-down {
+  opacity: 0.5;
+  position: fixed;
+  bottom: 10px;
+  right: 50%;
+  text-align: center;
+  margin: 0 auto;
+  font-size: 50px;
+  transition: 0.3s;
+  z-index: 10; }
+
+.fa-arrow-circle-down:hover {
+  transform: rotate(180deg);
+  opacity: 1;
+  transition: 0.3s; }
