--- a/styles/style.scss
+++ b/styles/style.scss
@@ -8,6 +8,7 @@
 @import 'components/about';
 @import 'components/footer';
 
+
 body {
     background: $bg-color;
     color: white;
@@ -49,6 +50,21 @@ h4 {
 
 section {
     width: 100%;
-    margin: 100px 0;
+    margin: 150px 0;
 }
-
+.fa-arrow-circle-down {
+    opacity: 0.5;
+    position: fixed;
+    bottom: 10px;
+    right: 50%;
+    text-align: center;
+    margin: 0 auto;
+    font-size: 50px;
+    transition: 0.3s;
+    z-index: 10;
+}
+.fa-arrow-circle-down:hover {
+    transform: rotate(180deg);
+    opacity:1;
+    transition: 0.3s
+}
