--- a/styles/components/_footer.scss
+++ b/styles/components/_footer.scss
@@ -45,6 +45,9 @@
 }
 
 @media (max-width:540px) {
+        .contact h2 {
+            font-size: 40px;
+        }
     .social-media {
         li {
             margin: 0 20px ;
