--- a/styles/components/_banner.scss
+++ b/styles/components/_banner.scss
@@ -12,9 +12,9 @@
         background: url('../images/dotted-half-circle.png') no-repeat right bottom;
         position: relative;
         padding: 50px 0;
-        img {
-            margin-top: 100px;
-        }
+        // img {
+        //     margin-top: 100px;
+        // }
         h2{
             position: relative;
             bottom: 150px;
@@ -90,6 +90,14 @@
         {
             visibility: hidden;
         }
+}
+
+@media (max-width:414px) {
+    .main-banner .shapes-bg h2 {
+        font-size: 18px;
+        bottom: 65px;
+        left: 10px;
+    }
 }
 
 @media (max-width:360px) {
