--- a/styles/components/_header.scss
+++ b/styles/components/_header.scss
@@ -4,7 +4,7 @@ header {
     grid-template-columns: 50% 50%;
     padding: 25px 0;
     nav {
-        grid-column-start: 2;
+        grid-column-start: 2;                
         ul{
             display: flex;
             justify-content: space-around;
@@ -12,11 +12,13 @@ header {
                 padding-bottom: 10px;
                 border-bottom: 1px solid $bg-color;
                 transition: 0.3s;
+                z-index: 2;
             }
             li:hover {
                 border-bottom: 1px solid red;
                 padding-bottom: 10px;
-                transition: 0.3s;
+                transition: 0.3s;                
+                cursor: pointer;
             }
         }
     }
