--- a/styles/style.css
+++ b/styles/style.css
@@ -150,11 +150,13 @@ header {
       header nav ul li {
         padding-bottom: 10px;
         border-bottom: 1px solid #0e0e0e;
-        transition: 0.3s; }
+        transition: 0.3s;
+        z-index: 2; }
       header nav ul li:hover {
         border-bottom: 1px solid red;
         padding-bottom: 10px;
-        transition: 0.3s; }
+        transition: 0.3s;
+        cursor: pointer; }
   header #x-grey {
     top: 50px;
     left: 450px; }
@@ -185,8 +187,6 @@ header {
     background: url("../images/dotted-half-circle.png") no-repeat right bottom;
     position: relative;
     padding: 50px 0; }
-    .main-banner .shapes-bg img {
-      margin-top: 100px; }
     .main-banner .shapes-bg h2 {
       position: relative;
       bottom: 150px;
@@ -239,6 +239,12 @@ header {
   #triangle {
     visibility: hidden; } }
 
+@media (max-width: 414px) {
+  .main-banner .shapes-bg h2 {
+    font-size: 18px;
+    bottom: 65px;
+    left: 10px; } }
+
 @media (max-width: 360px) {
   .main-banner .shapes-bg h2 {
     bottom: 30px; } }
@@ -282,7 +288,7 @@ header {
   .coding-languages img, .coding-languages i {
     font-size: 100px;
     height: 100px;
-    opacity: 0.3;
+    opacity: 0.5;
     filter: grayscale(90%);
     transition: 0.3s; }
   .coding-languages img:hover, .coding-languages i:hover {
@@ -428,22 +434,21 @@ header {
   .projects .projects-container .project-img img {
     margin: 0; }
   .projects .projects-container .project-info {
-    margin: 0px; } }
-
-.stats {
-  grid-template-columns: 1fr 1fr; }
+    margin: 0px; }
+  .stats {
+    grid-template-columns: 1fr 1fr; } }
 
 .about-me {
   display: flex; }
-  .about-me .profile-pic {
-    margin-left: 100px; }
-    .about-me .profile-pic img {
-      width: 70%;
-      border: 3px solid white; }
-    .about-me .profile-pic figcaption {
-      font-size: 10px; }
+  .about-me .profile-pic img {
+    width: 70%;
+    border: 3px solid white; }
+  .about-me .profile-pic figcaption {
+    font-size: 10px; }
   .about-me .bio {
     padding: 0 25px; }
+    .about-me .bio p {
+      line-height: 30px; }
     .about-me .bio h4 {
       margin: 25px 0; }
 
@@ -547,15 +552,14 @@ section {
   margin: 150px 0; }
 
 .fa-arrow-circle-down {
-  opacity: 0.5;
   position: fixed;
   bottom: 10px;
-  right: 50%;
+  right: 1%;
   text-align: center;
   margin: 0 auto;
   font-size: 50px;
   transition: 0.3s;
-  z-index: 10; }
+  z-index: 100; }
 
 .fa-arrow-circle-down:hover {
   transform: rotate(180deg);
