--- a/styles/style.css
+++ b/styles/style.css
@@ -243,7 +243,7 @@ header {
   .main-banner .shapes-bg h2 {
     font-size: 18px;
     bottom: 65px;
-    left: 10px; } }
+    left: 0px; } }
 
 @media (max-width: 360px) {
   .main-banner .shapes-bg h2 {
@@ -417,18 +417,16 @@ header {
       width: 75%;
       margin: 0 auto;
       text-align: center; }
+      .projects-container .project-item .project-img img {
+        margin: 0; }
     .projects-container .project-item .project-info {
       text-align: center;
       margin: 0; }
+      .projects-container .project-item .project-info p {
+        width: 75%;
+        margin: 35px auto; }
   .projects .projects-container .project-alt {
     flex-direction: column; } }
-
-@media (max-width: 960px) {
-  .projects-container .project-img img {
-    margin: 0; }
-  .project-info p {
-    width: 75%;
-    margin: 35px auto; } }
 
 @media (max-width: 540px) {
   .projects .projects-container .project-img img {
@@ -437,6 +435,10 @@ header {
     margin: 0px; }
   .stats {
     grid-template-columns: 1fr 1fr; } }
+
+@media (max-width: 360px) {
+  .stats {
+    font-size: 36px; } }
 
 .about-me {
   display: flex; }
@@ -554,7 +556,7 @@ section {
 .fa-arrow-circle-down {
   position: fixed;
   bottom: 10px;
-  right: 1%;
+  right: 10px;
   text-align: center;
   margin: 0 auto;
   font-size: 50px;
