--- a/styles/style.css
+++ b/styles/style.css
@@ -553,7 +553,7 @@ section {
   width: 100%;
   margin: 150px 0; }
 
-.fa-arrow-circle-down {
+.fa-arrow-circle-up {
   position: fixed;
   bottom: 10px;
   right: 10px;
@@ -563,7 +563,7 @@ section {
   transition: 0.3s;
   z-index: 100; }
 
-.fa-arrow-circle-down:hover {
-  transform: rotate(180deg);
+.fa-arrow-circle-up:hover {
+  transform: translateY(-15px);
   opacity: 1;
   transition: 0.3s; }
