--- a/styles/style.scss
+++ b/styles/style.scss
@@ -53,7 +53,7 @@ section {
     width: 100%;
     margin: 150px 0;
 }
-.fa-arrow-circle-down {
+.fa-arrow-circle-up {
     position: fixed;
     bottom: 10px;
     right: 10px;
@@ -63,8 +63,8 @@ section {
     transition: 0.3s;
     z-index: 100;
 }
-.fa-arrow-circle-down:hover {
-    transform: rotate(180deg);
+.fa-arrow-circle-up:hover {
+    transform: translateY(-15px);
     opacity:1;
     transition: 0.3s
 }
