--- a/styles/components/_projects.scss
+++ b/styles/components/_projects.scss
@@ -120,6 +120,7 @@
                 p {
                     width: 75%;
                     margin: 35px auto;
+                    text-align: left;
                 }
             }
         }  
